# thinking-dataset

./: .env.sample  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  choppedliver.py  globe.py  hugs.py  notes.py  openai_datasets.py  openai_datasets1.py  opneai1.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_app.py  thinking-dataset.toml  torch-2.5.1+cu124-cp312-cp312-win_amd64.whl
.github/ISSUE_TEMPLATE/: custom_issue.md
.github/workflows/: pylint.yml  pytest.yml  python-app.yml
_/case_study/: async_case.py  casestudy-cn.py
_/recent/: opneai1.py
assets/modelfiles/: tonic-casestudy-cn-32b.modelfile  tonic-casestudy-cn-8b.modelfile  tonic-casestudy-en-32b.modelfile  tonic-casestudy-en-8b.modelfile
assets/prompts/: 01_project.md  01_working_on_project.md  02_most_recent_work.md  02_recent_work.md  03_work_specification.md
assets/scripts/: __init__.py  activate_venv.py  clean_pycache_and_pyc.py  dedup_dataset.py  eval_model.py  eval_report.py  fuzz_dataset.py  gen_case_studies.py  generate_case_studies.py  generate_text.py  merge_datasets.py  run_cli_commands.py  run_hf_server.py  run_llama_cpp.py  run_tests_and_generate_report.py  stakeholders1.py  stakeholders2.py  stakeholders3.py  stakeholders_scaleway.py  test_openrouter.py
assets/templates/: action.md  composing.md  decision.md  evaluation.md  final_cable.json  final_cable.md  final_cable_schema.json  generate_cable.json  generate_cable_schema.json  generate_cable_system.txt  generation.md  reasoning.json  reasoning.md  reasoning_schema.json  reflecting.md  reflections.json  reflections.md  reflections_schema.json  review.md  thinking.json  thinking.md  thinking_schema.json
config/: config.yaml  database_config.yaml  dataset_config.yaml  runpod_config.yaml
docs/: 00_OVERVIEW.md  01_INSTALLATION.md  02_ARCHITECTURE.md  02a_DATASETS.md  02b_DATABASE.md  02b_TESTING.md  02c_TESTING.md  03_PIPELINE.md  04_DEPLOYMENT.md  05_USAGE.md  06_TROUBLESHOOTING.md  07_FAQ.md  08_REFERENCES.md  09_IDEAS.md  10_NOTES.md  11_ROADMAP.md  development_notes_p3n.md
dotnet/: .gitignore  thinking-dataset.csproj
dotnet/src/: Program.cs
old/case_study/: async_case.py  casestudy-cn.py  casestudy.py  create_case_1.py  create_case_study.py  daft.py  mystic.py  sanitized.py
prompts/: 01_working_on_project.md  01_working_on_thinking_dataset.md  02_most_recent_work.md  03_work_specification.md  most_recent_work.md  working_on_dataset_downloads.md
python/recent/: openai_datasets1.py
recent/: openai_codesalad.py  openai_datasets.py
reports/: report.html
reports/coverage/: class_index.html  function_index.html  index.html  setup_py.html  status.json  z_03eb1a2a02523a12___init___py.html  z_03eb1a2a02523a12_test_connector_py.html  z_03eb1a2a02523a12_test_data_tonic_py.html  z_03eb1a2a02523a12_test_dataset_downloads_py.html  z_03eb1a2a02523a12_test_dataset_info_py.html  z_03eb1a2a02523a12_test_dataset_operations_py.html  z_03eb1a2a02523a12_test_files_py.html  z_03eb1a2a02523a12_test_main_function_py.html  z_09c1063119554ca7___init___py.html  z_09c1063119554ca7_test_activate_venv_py.html  z_09c1063119554ca7_test_clean_pycache_and_pyc_py.html  z_09c1063119554ca7_test_run_tests_and_generate_report_py.html  z_0fcc20375de022f4_database_config_py.html  z_11e7a375db046e71___init___py.html  z_11e7a375db046e71_base_dataset_py.html  z_11e7a375db046e71_connector_py.html  z_11e7a375db046e71_data_tonic_py.html  z_11e7a375db046e71_dataset_downloads_py.html  z_11e7a375db046e71_dataset_info_py.html  z_11e7a375db046e71_dataset_operations_py.html  z_11e7a375db046e71_files_py.html  z_11e7a375db046e71_main_py.html  z_167580b807eaed04___init___py.html  z_167580b807eaed04_test_clean_py.html  z_167580b807eaed04_test_download_py.html  z_4386bee46fa777c8___init___py.html  z_4386bee46fa777c8_test_files_py.html  z_4931d524d3a8ab22_test_connector_py.html  z_4931d524d3a8ab22_test_data_tonic_py.html  z_4931d524d3a8ab22_test_dataset_downloads_py.html  z_4931d524d3a8ab22_test_dataset_info_py.html  z_4931d524d3a8ab22_test_dataset_operations_py.html  z_4931d524d3a8ab22_test_files_py.html  z_4931d524d3a8ab22_test_main_function_py.html  z_77fe701d3b2eb9c6___init___py.html  (+70 more)
scripts/: activate_venv.py  clean_data.py  clean_pycache_and_pyc.py  run_cli_commands.py  run_tests_and_generate_report.py
scripts/utilities/: easylog.py  tcollamad.py
scripts/utilities_scripts/: old-tcollamad.py  optivllm.py  runpod_utils.py  tcollamad.py  tcollamadistilabel.py
tests/huggingface/: test_data_tonic.py  test_dataset_downloads.py  test_dataset_operations.py  test_files.py  test_huggingface.py  test_main_function.py
tests/scripts/: test_activate_venv.py  test_clean_pycache_and_pyc.py  test_run_tests_and_generate_report.py
tests/thinking-dataset/: test_connector.py  test_dataset_info.py  test_files.py  test_main_function.py
tests/thinking_dataset/: test_main_function.py
thinking-dataset/: main.py
thinking-dataset/recent/: openai_codesalad.py
thinking_dataset/: __init__.py  base_dataset.py  connector.py  data_tonic.py  dataset_downloads.py  dataset_info.py  dataset_operations.py  files.py  main.py
thinking_dataset/commands/: __init__.py  clean.py  download.py  export.py  generate.py  load.py  ls.py  prepare.py  preprocess.py  process.py  upload.py
thinking_dataset/io/: files.py  (+4 more)
(+223 files in other folders)
