[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinking-dataset"
version = "0.1.0"
description = "Dataset for strategic business insights and STaR case study generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich",
    "huggingface_hub",
    "pandas",
    "pyarrow",
    "pydantic",
    "python-dotenv",
    "sqlalchemy",
    "typer",
]

[project.scripts]
setup = "assets.scripts.uv.setup:main"
