[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinking-dataset"
version = "0.1.0"
description = "Dataset for strategic business insights and STaR case study generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub[cli]>=0.19.0",
    "datasets>=2.15.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "sqlite-utils>=3.35.1",
    "pytest>=7.4.3",
    "pytest-html>=4.1.1",
    "pytest-cov>=4.1.0",
    "loguru>=0.7.2",
    "pandas>=2.1.3",
    "numpy<2.0.0",
    "scikit-learn>=1.3.2",
    "sqlalchemy>=2.0.23",
    "tqdm>=4.66.1",
    "pydantic>=2.5.2",
    "python-statemachine>=2.1.2",
    "jsonschema>=4.20.0",
    "ollama>=0.1.4",
    "tenacity>=8.2.3",
    "lorem-text>=2.1",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.1",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.scripts]
setup = "assets.scripts.uv.setup:main"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
