[project]
name = "thinking-dataset"
version = "0.0.2"
description = "Generate real-world insights and business case studies with strategic AI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
    "dataset",
    "ai",
    "machine-learning",
    "business",
    "case-studies",
    "strategic-ai",
]
authors = [{ name = "Kara Rawson", email = "rawsonkara@gmail.com" }]
maintainers = [{ name = "MultiTonic", email = "info@datatonic.ai" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "huggingface_hub[cli]>=0.19.0",
    "datasets>=2.15.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "sqlite-utils>=3.35.1",
    "pytest>=7.4.3",
    "pytest-html>=4.1.1",
    "pytest-cov>=4.1.0",
    "loguru>=0.7.2",
    "pandas>=2.1.3",
    "numpy<2.0.0",
    "scikit-learn>=1.3.2",
    "sqlalchemy>=2.0.23",
    "tqdm>=4.66.1",
    "pydantic>=2.5.2",
    "python-statemachine>=2.1.2",
    "jsonschema>=4.20.0",
    "ollama>=0.1.4",
    "tenacity>=8.2.3",
    "lorem-text>=2.1",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.1",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/MultiTonic/thinking-dataset"
Documentation = "https://github.com/MultiTonic/thinking-dataset/tree/main/docs"
Repository = "https://github.com/MultiTonic/thinking-dataset"
Issues = "https://github.com/MultiTonic/thinking-dataset/issues"
Changelog = "https://github.com/MultiTonic/thinking-dataset/blob/main/CHANGELOG.md"
Discord = "https://discord.gg/RgxcdVFjpz"

[project.scripts]
setup = "assets.scripts.uv.setup:main"
thinking-dataset = "thinking_dataset.main:cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=thinking_dataset --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.coverage.run]
branch = true
source = ["thinking_dataset"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 79
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
